k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-dep
  labels:
    app: flask-helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-helloworld
  template:
    metadata:
      labels:
        app: flask-helloworld
    spec:
      containers:
        - name: flask
          image: 712449709000.dkr.ecr.eu-west-3.amazonaws.com/k8straefikingressrestrictingroutes:v1
          ports:
            - containerPort: 5000
