k8s/flask-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-pod
  labels:
    app: flask-helloworld
spec:
  containers:
    - name: flask
      image: 712449709000.dkr.ecr.eu-west-3.amazonaws.com/k8straefikingressrestrictingroutes:v1
      ports:
        - containerPort: 5000
