k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  labels:
    app: flask-helloworld
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 5000
      protocol: TCP
      nodePort: 30000
  selector:
    app: flask-helloworld
