k8s/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  labels:
    name: flask-ingress
spec:
  rules:
  - host: flask-helloworld.info
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: flask-svc
            port: 
              number: 8080
